# flow_runner

./: .editorconfig  .gitignore  AGENTS.md  FLOW_RUNNER_QT_REFACTOR_DESIGN.md  FLOW_RUNNER_QT_REFACTOR_IMPLEMENTATION_PLAN.md  IMPROVEMENT_A_PLAN.md  LEGACY_CONVERSION_REPORT.md  PLAN_B.md  README.md  REAL_ENVIRONMENT_CHECKLIST.md  REFACTOR_STATUS.md  SAVE_EDITOR_FIX_PLAN.md  flow_runner_p1.py  flow_runner_p2.py  flow_runner_p3.py  project.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_flow_runner.pyw
config/: flow_runner.json
data/: project.json
docs/: DEPENDENCIES.md
docs/archive/: FLOW_RUNNER_QT_REFACTOR_IMPLEMENTATION_PLAN.md  IMPROVEMENT_A_PLAN.md  LEGACY_CONVERSION_REPORT.md
flow_runner/: app.py  display_labels.py
flow_runner/capabilities/: __init__.py  base.py  registry.py
flow_runner/domain/: __init__.py  actions.py  binding_expressions.py  capture_targets.py  cloning.py  comparisons.py  conditions.py  enums.py  errors.py  policies.py  project.py  references.py  results.py  routing.py  window_targets.py
flow_runner/engine/: __init__.py  bindings.py  cancellation.py  context.py  parallel.py  perception.py  resources.py  runner.py  step_executor.py  workflow_executor.py
flow_runner/infrastructure/: __init__.py  paths.py
flow_runner/migration/: __init__.py  cli.py  data_directory.py  legacy.py  window_controls.py
flow_runner/ui/: __init__.py  application_visibility.py  capture_preferences.py  capture_selection.py  hotkeys.py  (+17 more)
scripts/: migrate_plan_b_data.py  migrate_window_control_actions.py  preview_dark_ui.py  基本卡片.json
(+168 files in other folders)
