[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "flow-runner-qt"
version = "0.1.0"
description = "Composable desktop automation workflow editor and runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7",
  "pydantic>=2.10,<3",
  "Pillow>=11,<13",
  "opencv-python>=4.10,<5",
  "numpy>=2,<3",
  "pyautogui>=0.9.54,<1",
  "pynput>=1.7.7,<2",
  "pywin32>=308; platform_system == 'Windows'",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "pytest-qt>=4.4,<5",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
]

[project.scripts]
flow-runner = "flow_runner.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["flow_runner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["flow_runner"]
